Fix alignement of the toucan-huddle-speaker in Presentation

--- a/css/components/Main/Presentation/presentation.css
+++ b/css/components/Main/Presentation/presentation.css
@@ -119,7 +119,6 @@
 
   /* Toucan Speaker wrapper  */
   .presentation .toucan-huddle-speaker {
-    margin-top: 0;
     order: -1;
     align-items: flex-start;
     position: relative;
